<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="in.ceeq.define.ui.home.HomeViewModel"/>

        <import type="android.view.View"/>

        <import type="android.text.TextUtils"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/btnClose1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.progressViewVisible ? View.VISIBLE : View.GONE}"
            tools:visibility="gone">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_32"
                tools:visibility="visible"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:visibility="@{viewModel.progressViewVisible ? View.GONE : View.VISIBLE}"
            tools:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnSettings"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/settings"
                    android:gravity="start"
                    android:minWidth="0dp"
                    android:textAllCaps="false"
                    app:srcCompat="@drawable/ic_settings_black_24dp"
                    tools:text="Love"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/list_text_margin_vertical"
                    android:layout_marginTop="@dimen/list_text_margin_vertical"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_logo"
                    />

                <ImageButton
                    android:id="@+id/btnClose2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/close"
                    android:gravity="start"
                    android:minWidth="0dp"
                    android:textAllCaps="false"
                    app:srcCompat="@drawable/ic_close_black_24dp"
                    tools:text="Love"
                    />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/top_margin_16"
                android:text="@{viewModel.definition.phrase}"
                tools:text="Love"
                />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/list_text_margin_vertical"
                android:text="@string/no_result"
                android:visibility="@{viewModel.noResults ? View.VISIBLE : View.GONE}"
                tools:text="No definition found."
                />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtDefinition"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/list_text_margin_vertical"
                android:longClickable="true"
                android:text="@{viewModel.definition.getDefinition()}"
                android:textIsSelectable="true"
                android:visibility="@{!TextUtils.isEmpty(viewModel.definition.getDefinition()) ? View.VISIBLE : View.GONE}"
                tools:text="To have a strong affection for."
                />


            <!--android:onLongClick="@{(v) -> viewModel.handleOnCopyDefinition(viewModel.definition.getAlternateDefinition())}"-->

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtAlternateDefinition"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/list_text_margin_vertical"
                android:longClickable="true"
                android:text="@{viewModel.definition.getAlternateDefinition()}"
                android:textIsSelectable="true"
                android:visibility="@{!TextUtils.isEmpty(viewModel.definition.getAlternateDefinition()) ? View.VISIBLE : View.GONE}"
                tools:text="To have a strong affection for."
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:visibility="@{!TextUtils.isEmpty(viewModel.definition.getSuggestedPhrase()) ? View.VISIBLE : View.GONE}">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/suggestions"
                    tools:text="Suggestions"
                    />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnSuggestedPhrase"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingEnd="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingStart="0dp"
                    android:text="@{viewModel.definition.getSuggestedPhrase()}"
                    android:textAllCaps="false"
                    tools:text="Love"
                    />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>
