<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="definitionViewModel"
            type="in.ceeq.define.databinding.DefinitionViewModel"/>

        <import type="android.view.View"/>

        <import type="android.text.TextUtils"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:onClick="@{definitionViewModel::close}"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{definitionViewModel.progressViewVisible ? View.VISIBLE : View.GONE}"
            tools:visibility="gone">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_32"
                tools:visibility="visible"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:visibility="@{definitionViewModel.progressViewVisible ? View.GONE : View.VISIBLE}"
            tools:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/settings"
                    android:gravity="start"
                    android:minWidth="0dp"
                    android:onClick="@{definitionViewModel::openSettings}"
                    android:textAllCaps="false"
                    app:srcCompat="@drawable/ic_settings_black_24dp"
                    tools:text="Love"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/list_text_margin_vertical"
                    android:layout_marginTop="@dimen/list_text_margin_vertical"
                    app:srcCompat="@drawable/ic_logo"
                    />

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/close"
                    android:gravity="start"
                    android:minWidth="0dp"
                    android:onClick="@{definitionViewModel::close}"
                    android:textAllCaps="false"
                    app:srcCompat="@drawable/ic_close_black_24dp"
                    tools:text="Love"
                    />
            </RelativeLayout>

            <in.ceeq.define.utils.ui.TextViewPlus
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/top_margin_16"
                android:text="@{definitionViewModel.phrase}"
                tools:text="Love"
                />

            <in.ceeq.define.utils.ui.TextViewPlus
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/list_text_margin_vertical"
                android:text="@string/no_result"
                android:visibility="@{definitionViewModel.noResults ? View.VISIBLE : View.GONE}"
                tools:text="No definition found."
                />


            <in.ceeq.define.utils.ui.TextViewPlus
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/list_text_margin_vertical"
                android:text="@{definitionViewModel.definition}"
                android:onLongClick="@{definitionViewModel::copyDefinition}"
                android:textIsSelectable="true"
                android:visibility="@{!TextUtils.isEmpty(definitionViewModel.definition) ? View.VISIBLE : View.GONE}"
                tools:text="To have a strong affection for."
                />

            <in.ceeq.define.utils.ui.TextViewPlus
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/list_text_margin_vertical"
                android:textIsSelectable="true"
                android:text="@{definitionViewModel.definition2}"
                android:onLongClick="@{definitionViewModel::copyDefinition2}"
                android:longClickable="true"
                android:visibility="@{!TextUtils.isEmpty(definitionViewModel.definition2) ? View.VISIBLE : View.GONE}"
                tools:text="To have a strong affection for."
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:visibility="@{!TextUtils.isEmpty(definitionViewModel.suggestedPhrase) ? View.VISIBLE : View.GONE}">

                <in.ceeq.define.utils.ui.TextViewPlus
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/suggestions"
                    tools:text="Suggestions"
                    />

                <in.ceeq.define.utils.ui.ButtonPlus
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:onClick="@{(v) -> definitionViewModel.loadSuggestedPhrase()}"
                    android:paddingLeft="0dp"
                    android:paddingStart="0dp"
                    android:text="@{definitionViewModel.suggestedPhrase}"
                    android:textAllCaps="false"
                    tools:text="Love"
                    />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>
